--- a/Assets/Resources/UITk/Themes/LetterSpellTheme.uss
+++ b/Assets/Resources/UITk/Themes/LetterSpellTheme.uss
@@ -1,22 +1,26 @@
 .unity-button {
-    padding-top: 10px;
-    padding-right: 20px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
-    border-bottom-right-radius: 12px;
-    border-bottom-left-radius: 12px;
-    border-top-width: 4px;
-    border-right-width: 4px;
-    border-bottom-width: 4px;
-    border-left-width: 4px;
+    padding-top: 30px;
+    padding-right: 70px;
+    padding-bottom: 30px;
+    padding-left: 70px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+    border-top-width: 10px;
+    border-right-width: 10px;
+    border-bottom-width: 10px;
+    border-left-width: 10px;
     border-left-color: rgb(0, 0, 0);
     border-right-color: rgb(0, 0, 0);
     border-top-color: rgb(0, 0, 0);
     border-bottom-color: rgb(0, 0, 0);
-    margin-top: 15px;
+    margin-top: 30px;
     background-color: rgb(255, 255, 255);
+    -unity-font-style: bold;
+    margin-bottom: 30px;
+    margin-right: 30px;
+    margin-left: 30px;
 }
 
 .unity-button:hover {
@@ -24,92 +28,114 @@
 }
 
 :root {
-    font-size: 18px;
-    -unity-font-style: bold;
+    font-size: 64px;
 }
 
 .unity-label {
 }
 
 .unity-base-text-field__input {
-    border-top-width: 4px;
-    border-right-width: 4px;
-    border-bottom-width: 4px;
-    border-left-width: 4px;
+    border-top-width: 10px;
+    border-right-width: 10px;
+    border-bottom-width: 10px;
+    border-left-width: 10px;
     border-left-color: rgb(0, 0, 0);
     border-right-color: rgb(0, 0, 0);
     border-top-color: rgb(0, 0, 0);
     border-bottom-color: rgb(0, 0, 0);
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
-    border-bottom-right-radius: 12px;
-    border-bottom-left-radius: 12px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;
     background-color: rgb(255, 255, 255);
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-right: 70px;
+    padding-left: 70px;
 }
 
 .unity-base-text-field {
-    margin-top: 4px;
+    margin-top: 30px;
     margin-right: 4px;
-    margin-bottom: 4px;
+    margin-bottom: 30px;
     margin-left: 4px;
 }
 
 #easyButton {
-    background-color: rgb(243, 183, 33);
-    border-left-color: rgb(255, 236, 179);
-    border-right-color: rgb(255, 236, 179);
-    border-top-color: rgb(255, 236, 179);
-    border-bottom-color: rgb(255, 236, 179);
+    background-color: rgb(255, 190, 0);
+    border-left-color: rgb(255, 251, 232);
+    border-right-color: rgb(255, 251, 232);
+    border-top-color: rgb(255, 251, 232);
+    border-bottom-color: rgb(255, 251, 232);
 }
 
 #hardButton {
-    background-color: rgb(5, 168, 255);
+    background-color: rgb(1, 168, 255);
+    border-left-color: rgb(114, 207, 255);
+    border-right-color: rgb(114, 207, 255);
+    border-top-color: rgb(114, 207, 255);
+    border-bottom-color: rgb(114, 207, 255);
 }
 
 .choice-button {
-    font-size: 24px;
-    padding-top: 40px;
-    padding-right: 40px;
-    padding-bottom: 40px;
-    padding-left: 40px;
-    margin-top: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    margin-left: 20px;
+    font-size: 75px;
+    padding-top: 140px;
+    padding-right: 100px;
+    padding-bottom: 140px;
+    padding-left: 100px;
+    margin-top: 30px;
+    margin-right: 70px;
+    margin-bottom: 30px;
+    margin-left: 70px;
+    border-top-left-radius: 35px;
+    border-top-right-radius: 35px;
+    border-bottom-right-radius: 35px;
+    border-bottom-left-radius: 35px;
 }
 
 #nextWordButton {
 }
 
 .lsp-letter-card {
-    transform-origin: left top;
     transition-property: rotate;
     transition-duration: 1s;
     background-color: rgb(255, 251, 232);
-    border-top-width: 4px;
-    border-right-width: 4px;
-    border-bottom-width: 4px;
-    border-left-width: 4px;
+    border-top-width: 10px;
+    border-right-width: 10px;
+    border-bottom-width: 10px;
+    border-left-width: 10px;
+    font-size: 130px;
+    -unity-font-style: bold;
+    width: 208px;
+    height: 208px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+    align-items: center;
+    justify-content: center;
 }
 
 .lsp-letter-card.selected {
-    color: rgb(62, 108, 91);
-    margin-top: -20px;
-    background-color: rgb(209, 253, 236);
+    margin-top: 0;
+    background-color: rgb(255, 190, 0);
+    border-left-color: rgb(0, 0, 0);
+    border-right-color: rgb(0, 0, 0);
+    border-top-color: rgb(0, 0, 0);
+    border-bottom-color: rgb(0, 0, 0);
+    rotate: -15deg;
 }
 
 .lsp-letter-card__button-container {
     font-size: 12px;
     position: absolute;
     top: 100%;
-    /*margin-top: 5px;*/
     padding: 5px;
     display: none;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     background-color: rgb(209, 253, 236);
-   /* background-color: rgba(0, 0, 0, 0.4);*/
     border-radius: 12px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
@@ -118,7 +144,6 @@
 .lsp-letter-card.selected .lsp-letter-card__button-container {
     display: flex;
 }
-
 
 .lsp-letter-card__button {
     margin: 0;
@@ -151,8 +176,9 @@
 }
 
 .lsp-card-view-item.animated {
-    transition-property: left, top, margin-top;
-    transition-duration: 0.4s, 0.4s, 0.4s;
+    transition-property: left, top, margin-top, rotate;
+    transition-duration: 0.4s, 0.4s, 0.4s, 0.4s;
+    transition-timing-function: ease, ease, ease, ease-out;
 }
 
 .lsp-insertion-placeholder {
@@ -172,14 +198,14 @@
 }
 
 #settingsView {
-    padding-top: 15px;
-    padding-right: 15px;
-    padding-bottom: 15px;
-    padding-left: 15px;
+    padding-top: 60px;
+    padding-right: 70px;
+    padding-bottom: 4px;
+    padding-left: 70px;
 }
 
-#settingsView .unity-base-field__label {
-    -unity-font-style: normal;
+.unity-base-field__label {
+    min-width: 680px;
 }
 
 .unity-radio-button-group__container {
@@ -195,30 +221,41 @@
 }
 
 .settings-header-label {
-    margin-top: 10px;
+    margin-top: 70px;
+    -unity-font-style: bold;
+    margin-bottom: 30px;
 }
 
 .unity-radio-button__checkmark-background {
-    border-top-width: 2px;
-    border-right-width: 2px;
-    border-bottom-width: 2px;
-    border-left-width: 2px;
+    border-top-width: 6px;
+    border-right-width: 6px;
+    border-bottom-width: 6px;
+    border-left-width: 6px;
     border-left-color: rgb(0, 0, 0);
     border-right-color: rgb(0, 0, 0);
     border-top-color: rgb(0, 0, 0);
     border-bottom-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0);
-    padding-top: 2px;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    width: 50px;
+    height: 50px;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    border-bottom-left-radius: 25px;
 }
 
 .unity-radio-button__checkmark {
-    width: 16px;
-    height: 16px;
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
-    border-bottom-right-radius: 12px;
-    border-bottom-left-radius: 12px;
-    background-color: rgb(140, 36, 176);
+    width: 38px;
+    height: 38px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    background-color: rgb(161, 116, 244);
 }
 
 .unity-toggle__checkmark {
@@ -227,41 +264,50 @@
     border-right-color: rgb(0, 0, 0);
     border-top-color: rgb(0, 0, 0);
     border-bottom-color: rgb(0, 0, 0);
-    border-top-width: 2px;
-    border-right-width: 2px;
-    border-bottom-width: 2px;
-    border-left-width: 2px;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-    -unity-background-image-tint-color: rgb(145, 52, 166);
+    border-top-width: 6px;
+    border-right-width: 6px;
+    border-bottom-width: 6px;
+    border-left-width: 6px;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+    border-bottom-right-radius: 7px;
+    border-bottom-left-radius: 7px;
+    -unity-background-image-tint-color: rgb(161, 116, 244);
+    width: 50px;
+    height: 50px;
+    margin-right: 30px;
 }
 
 .unity-base-slider__tracker {
     background-color: rgb(0, 0, 0);
-    height: 4px;
+    height: 10px;
     border-top-width: 0;
     border-right-width: 0;
     border-bottom-width: 0;
     border-left-width: 0;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 
 .unity-base-slider__dragger {
-    background-color: rgb(144, 64, 197);
-    border-top-width: 2px;
-    border-right-width: 2px;
-    border-bottom-width: 2px;
-    border-left-width: 2px;
+    background-color: rgb(161, 116, 244);
+    border-top-width: 6px;
+    border-right-width: 6px;
+    border-bottom-width: 6px;
+    border-left-width: 6px;
     border-left-color: rgb(0, 0, 0);
     border-right-color: rgb(0, 0, 0);
     border-top-color: rgb(0, 0, 0);
     border-bottom-color: rgb(0, 0, 0);
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-    width: 16px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    width: 40px;
+    height: 66px;
+    margin-top: -33px;
 }
 
 .unity-base-popup-field__input {
@@ -270,46 +316,178 @@
     border-right-color: rgb(0, 0, 0);
     border-top-color: rgb(0, 0, 0);
     border-bottom-color: rgb(0, 0, 0);
-    border-top-width: 4px;
-    border-right-width: 4px;
-    border-bottom-width: 4px;
-    border-left-width: 4px;
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
-    border-bottom-right-radius: 12px;
-    border-bottom-left-radius: 12px;
+    border-top-width: 10px;
+    border-right-width: 10px;
+    border-bottom-width: 10px;
+    border-left-width: 10px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .unity-base-text-field__input--placeholder {
     color: rgb(164, 164, 164);
-    -unity-font-style: bold-and-italic;
+    -unity-font-style: italic;
 }
 
 .purple {
-    background-color: rgb(161, 116, 244);
+    background-color: rgb(161, 116, 243);
     color: rgb(255, 255, 255);
 }
 
 .lsp-popup {
     background-color: rgb(255, 255, 255);
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
+    padding-top: 70px;
+    padding-right: 100px;
+    padding-bottom: 20px;
+    padding-left: 100px;
     border-left-color: rgb(0, 0, 0);
     border-right-color: rgb(0, 0, 0);
     border-top-color: rgb(0, 0, 0);
     border-bottom-color: rgb(0, 0, 0);
-    border-top-width: 4px;
-    border-right-width: 4px;
-    border-bottom-width: 4px;
-    border-left-width: 4px;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px;
-    border-bottom-left-radius: 6px;
+    border-top-width: 10px;
+    border-right-width: 10px;
+    border-bottom-width: 10px;
+    border-left-width: 10px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;
 }
 
 .lsp-popup .unity-button {
     min-width: 137px;
+}
+
+.title-text {
+    -unity-font-style: bold;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    color: rgb(255, 255, 255);
+}
+
+.lsp-logo {
+    position: absolute;
+    width: 330px;
+    height: 82px;
+    top: 58px;
+    left: 52px;
+    background-image: url("project://database/Assets/UI/Images/LetterSpell_smallLogo.png?fileID=2800000&guid=75dc9c01c37ed4403948da36191f22df&type=3#LetterSpell_smallLogo");
+}
+
+.lsp-debug-view {
+    font-size: 24px;
+}
+
+.lsp-debug-view .unity-button {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+.choice-button-container {
+    flex-direction: row;
+}
+
+.start-game-button {
+}
+
+#pauseButtonIcon {
+    background-image: url("project://database/Assets/UI/Images/PauseIcon.png?fileID=2800000&guid=c9d90502b54df4fb8a6679c396a05fc0&type=3#PauseIcon");
+    width: 45px;
+    height: 47px;
+    -unity-background-scale-mode: scale-to-fit;
+}
+
+.lsp-popup .unity-label {
+    -unity-text-align: middle-center;
+    -unity-font-style: bold;
+    margin-top: 30px;
+    margin-bottom: 65px;
+}
+
+.purple:active {
+    background-color: rgb(130, 68, 243);
+    color: rgb(255, 255, 255);
+}
+
+.settings-section__title {
+    -unity-font-style: bold;
+}
+
+.unity-base-field {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.lsp-button-strip-field__button-container {
+    flex-direction: row;
+}
+
+.lsp-button-strip-field__button {
+    background-color: rgb(161, 116, 243);
+    color: rgb(255, 255, 255);
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.lsp-button-strip-field__button:active {
+    background-color: rgb(116, 45, 243);
+}
+
+.lsp-button-strip-field__button--left {
+    margin-right: 0;
+    border-right-width: 5px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.lsp-button-strip-field__button--right {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-left-width: 5px;
+    margin-left: 0;
+}
+
+.lsp-button-strip-field__button:checked {
+    background-color: rgb(116, 45, 243);
+}
+
+.unity-radio-button__label {
+    min-width: 0;
+    margin-right: 30px;
+    margin-left: 30px;
+}
+
+.unity-radio-button {
+    flex-direction: row-reverse;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.unity-foldout__toggle > .unity-toggle__input:focus:checked > .unity-toggle__checkmark {
+    background-image: url("project://database/Assets/UI/Images/Toggle-Checkmark.png?fileID=2800000&guid=c049f948873dd43099c96def60ac9c31&type=3#Toggle-Checkmark");
+}
+
+.unity-base-popup-field__arrow {
+    width: 50px;
+    height: 50px;
+    margin-right: 30px;
+    background-image: url("project://database/Assets/UI/Images/Dropdown-Arrow.png?fileID=2800000&guid=29e091d0e13ce4d928a786bc1ff99351&type=3#Dropdown-Arrow");
+    margin-top: 14px;
+    margin-bottom: 14px;
+}
+
+.row {
+    flex-direction: row;
+}
+
+#closeSettingsButton {
+    margin-left: 0;
 }
